[gd_scene load_steps=7 format=3 uid="uid://crwgtl475v8qw"]

[ext_resource type="Script" path="res://UI/Buttons.gd" id="1_00pdw"]
[ext_resource type="Texture2D" uid="uid://dqvbrn7acgpve" path="res://UI/Sprites/UI_Background.png" id="1_5fg21"]
[ext_resource type="Texture2D" uid="uid://b2qkw5k1lyew6" path="res://UI/Sprites/blanco.png" id="3_ssvc7"]
[ext_resource type="Texture2D" uid="uid://b7741djpfcg2q" path="res://UI/Sprites/Exit.png" id="4_6man5"]
[ext_resource type="Texture2D" uid="uid://cxim0c4hed4gl" path="res://UI/Sprites/Back_Button.png" id="5_80pno"]
[ext_resource type="Texture2D" uid="uid://c27rbh52rcewc" path="res://UI/Sprites/comic.png" id="6_iet6b"]

[node name="CreditsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_00pdw")
metadata/_edit_vertical_guides_ = [960.0]
metadata/_edit_horizontal_guides_ = [540.0]

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(4, 4)
texture = ExtResource("1_5fg21")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 497.0
offset_top = 52.0
offset_right = 729.0
offset_bottom = 296.0
scale = Vector2(4, 4)
texture = ExtResource("3_ssvc7")

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1340.0
offset_top = 17.0
offset_right = 1380.0
offset_bottom = 57.0
scale = Vector2(4, 4)
texture_normal = ExtResource("4_6man5")

[node name="BackButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 560.0
offset_top = 903.0
offset_right = 760.0
offset_bottom = 943.0
scale = Vector2(4, 4)
texture_normal = ExtResource("5_80pno")

[node name="TextureRect3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 237.0
offset_top = 107.0
offset_right = 717.0
offset_bottom = 377.0
scale = Vector2(3, 3)
texture = ExtResource("6_iet6b")

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
