[gd_scene load_steps=8 format=3 uid="uid://b1i47pvguocdh"]

[ext_resource type="Script" path="res://UI/Buttons.gd" id="1_stkhm"]
[ext_resource type="Texture2D" uid="uid://dqvbrn7acgpve" path="res://UI/Sprites/UI_Background.png" id="2_7tb6j"]
[ext_resource type="Texture2D" uid="uid://jk7dkt3r21lw" path="res://UI/Sprites/UI_Block.png" id="3_foqpn"]
[ext_resource type="Texture2D" uid="uid://t3cnvs63j3tp" path="res://UI/Sprites/Play_Button.png" id="4_dokvn"]
[ext_resource type="Texture2D" uid="uid://d1fsex6ieh67y" path="res://UI/Sprites/Lore.png" id="5_tp2iu"]
[ext_resource type="Texture2D" uid="uid://0s4v81qxur5o" path="res://UI/Sprites/Credits_Button.png" id="6_1r7d8"]
[ext_resource type="Texture2D" uid="uid://b7741djpfcg2q" path="res://UI/Sprites/Exit.png" id="7_hgtg4"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 768.0
offset_bottom = 432.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_stkhm")
metadata/_edit_vertical_guides_ = [960.0]
metadata/_edit_horizontal_guides_ = [540.0]

[node name="BG" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(4, 4)
texture = ExtResource("2_7tb6j")

[node name="BG2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -847.0
offset_top = 52.0
offset_right = -615.0
offset_bottom = 296.0
grow_horizontal = 2
scale = Vector2(4, 4)
texture = ExtResource("3_foqpn")

[node name="PlayButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 560.0
offset_top = 384.0
offset_right = 760.0
offset_bottom = 424.0
scale = Vector2(4, 4)
texture_normal = ExtResource("4_dokvn")

[node name="LoreButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 560.0
offset_top = 561.0
offset_right = 760.0
offset_bottom = 601.0
scale = Vector2(4, 4)
texture_normal = ExtResource("5_tp2iu")

[node name="CreditsButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 560.0
offset_top = 740.0
offset_right = 760.0
offset_bottom = 780.0
scale = Vector2(4, 4)
texture_normal = ExtResource("6_1r7d8")

[node name="ExitButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1340.0
offset_top = 17.0
offset_right = 1373.0
offset_bottom = 50.0
scale = Vector2(4, 4)
texture_normal = ExtResource("7_hgtg4")

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="LoreButton" to="." method="_on_lore_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
